--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -44,28 +44,17 @@
 .titulo-nome{
     padding-top: 8px;
 }
-
-.rodape{  
-    display: flex; 
-    font-size: .8rem; 
-    width: 100% !important;   
-    
-    text-align: center;   
-    height: 80px;
-    color: white;
-    background: rgb(77, 76, 76);
+.footer{
     
 }
-a:link{
-    color: #ffffff;
-}
-*,
-*:before,
-*:after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  list-style: none;
-  text-decoration: none;
+.rodape{
+    background: #58595a;
+    width: 100%;
+    height: 40px;  
+    right: 0;
+    left: 0;
+    bottom: 0; 
+    z-index: 1030
+   
+   
 }
